@@ -113,7 +113,7 @@ list, please point out.
   * Bug reports.
 * Lennon Day-Reynolds: Bug reports.
 * Tilo: A bug report.
-* Matt Mencel: A bug report.
+* Matt Mencel: Bug reports.
 * CultureSpy:
   * Bug reports.
   * Bug fixes.
